<resources>
    <string name="app_name">GoldWise</string>

    <string name="title_activity_splash_screen">SplashScreen</string>

    <!--buttons-->
    <string name="login_button">Login</string>
    <string name="goToSignUp_button">Not a user yet? Sign up!</string>
    <string name="signUp_button">Sign up</string>
    <string name="goBack_button">Go back!</string>

    <!--hints-->
    <string name="phoneNumberHint_editText">Phone number</string>
    <string name="usernameHint_editText">Username</string>
    <string name="passwordHint_editText">Password</string>
    <string name="repeatPasswordHint_editText">Repeat Password</string>

    <!--toasts-->
    <string name="loginSuccessful_toast">Login successful</string>
    <string name="signUpSuccessful_toast">Sign up successful</string>
    <string name="passwordsDontMatch_toast">Passwords don\'t match</string>
    <string name="provideData_toast">Provide all necessary data</string>

    <!--textViews-->
    <string name="eventBudget_textView">Event Budget</string>
    <string name="newestSaving_textView">Your Goal</string>
    <string name="latestDebts_textView">Latest Detbs</string>

    <string name="title_activity_specific_event">SpecificEventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_event">AddEventActivity</string>

    <!--checkboxes-->
    <string name="paid_checkbox">Paid</string>
    <string name="notPaid_checkbox">Not Paid</string>
    <string name="saving_checkbox">For Saving</string>



</resources>
