<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jakubkarlo.com.goldwise.Activities.SignUpActivity">

    <EditText
        android:id="@+id/signUpPhoneNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneNumberHint_editText"
        android:inputType="phone"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpPasswordEditText"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.505"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signUpUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usernameHint_editText"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumEditText"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpPasswordEditText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint_editText"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.502"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signUpRepeatPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repeatPasswordHint_editText"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordEditText"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/goBackFromSignupButton"
        app:layout_constraintVertical_bias="0.411"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:onClick="signUserUp"
        android:text="@string/signUp_button"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="354dp" />

    <Button
        android:id="@+id/goBackFromSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="goBack"
        android:text="@string/goBack_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signUpButton"
        tools:layout_editor_absoluteY="354dp" />
</android.support.constraint.ConstraintLayout>
