<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="jakubkarlo.com.goldwise.Fragments.DebtsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/debtsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <LinearLayout
            android:id="@+id/checkboxesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/paidCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/paid_checkbox" />

            <CheckBox
                android:id="@+id/notPaidCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/notPaid_checkbox" />

            <CheckBox
                android:id="@+id/savingsCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/saving_checkbox" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
